# recoil

./: .gitignore  Cargo.toml  LICENSE  justfile
src/: collection.rs  cursor.rs  error.rs  lib.rs  sequence.rs  slice.rs  span.rs  view.rs
